--- a/main.html
+++ b/main.html
@@ -3,54 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/main.css">
-    <script defer src="./js/main.js"></script>
-    <link rel="icon" href="./icons/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="main.css">
+    <script defer src="main.js"></script>
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <title>Happy NY!</title>
 </head>
 <body>
     
     <div class="container">
-        <h1 class="title">
+        <h1 class="title">🎄 С наступающим Новым годом! 🎄</h1>
+ 
+        <p class="subtitle">
+            Пусть этот год принесет  удачу, радость и вдохновение!
+        </p>
+        <p class="subtitle">
+            На этой странице, как подарки под ёлочкой, притаились волшебные пожелания!
+        </p>
+        <p class="subtitle">
+            Нажми на кнопку ниже
             <picture>
-                <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f381/512.webp" type="image/webp">
-                <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f381/512.gif" alt="🎁" width="32" height="32">
+                <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f496/512.webp" type="image/webp">
+                <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f496/512.gif" alt="💖" width="32" height="32">
               </picture>
-              Поздравляю с наступающим Новым годом! 🎄</h1>
-        <picture>
-            <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f381/512.webp" type="image/webp">
-            <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f381/512.gif" alt="🎁" width="32" height="32">
-          </picture>
-          <picture>
-            <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f389/512.webp" type="image/webp">
-            <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f389/512.gif" alt="🎉" width="32" height="32">
-          </picture>
-          <picture>
-            <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/2744_fe0f/512.webp" type="image/webp">
-            <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/2744_fe0f/512.gif" alt="❄" width="32" height="32">
-          </picture>
-        <p class="subtitle">
-            Пусть этот год принесет вам удачу, радость и вдохновение!
-        </p>
-        <p class="subtitle">
-            На этой странице вас ждут предсказания, которые откроют завесу будущего. Нажмите на кнопку ниже, чтобы получить одно из случайных предсказаний, которое точно подарит вам улыбку и поднимет настроение. 
-        </p>
-        <p class="subtitle">
-            Кто знает, может быть, именно это предсказание сбудется в наступающем году? 
+              Кто знает, может быть, именно это сбудется в наступающем году? 
         </p>
         <button id="wish-button" class="wish-button">
             <picture>
                 <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/2728/512.webp" type="image/webp">
                 <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/2728/512.gif" alt="✨" width="32" height="32">
               </picture>
-              <picture>
-                <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f52e/512.webp" type="image/webp">
-                <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f52e/512.gif" alt="🔮" width="32" height="32">
-              </picture>
-               <picture>
-                <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/2728/512.webp" type="image/webp">
-                <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/2728/512.gif" alt="✨" width="32" height="32">
-              </picture>
+
             </button>
         <div id="wish-box" class="wish-box"></div>
     </div>
