--- a/main.html
+++ b/main.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
-    <script defer src="main.js"></script>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="./main.css">
+    <script defer src="./main.js"></script>
+    <link rel="icon" href="./favicon.ico" type="image/x-icon">
     <title>Happy NY!</title>
 </head>
 <body>
