--- a/main.html
+++ b/main.html
@@ -21,17 +21,18 @@
         </p>
         <p class="subtitle">
             Нажми на кнопку ниже
-            <picture>
+            <!-- <picture>
                 <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/1f496/512.webp" type="image/webp">
                 <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/1f496/512.gif" alt="💖" width="32" height="32">
-              </picture>
+              </picture> -->
               Кто знает, может быть, именно это сбудется в наступающем году? 
         </p>
         <button id="wish-button" class="wish-button">
-            <picture>
+            <!-- <picture>
                 <source srcset="https://fonts.gstatic.com/s/e/notoemoji/latest/2728/512.webp" type="image/webp">
                 <img src="https://fonts.gstatic.com/s/e/notoemoji/latest/2728/512.gif" alt="✨" width="32" height="32">
-              </picture>
+              </picture> -->
+              Поздравления
 
             </button>
         <div id="wish-box" class="wish-box"></div>
